LineChart responsivness increased